<resources>
    <string name="app_name">FacundoJatonAndroidPortfolio</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_recover">Recover password</string>
    <string name="main_text_clean_firestore">Main clean firestore login</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Sign Up</string>
    <string name="not_registered_yet_sign_up">Are you not registered yet? Sign Up!</string>
    <string name="share">Share</string>
    <string name="cv">CV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cv_text_description">Here goes the Curriculum Vitae</string>
    <string name="home">Home</string>
    <string name="experience">Experience</string>
    <string name="projects">Projects</string>
    <string name="apps">Apps</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
</resources>